Properly fixing the overflow for the user list

--- a/style.css
+++ b/style.css
@@ -259,6 +259,13 @@ border-radius:3px;
 background-color:#cacaca; 
 }
 
+.userlist{
+  width:100%;
+  height:100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .userlist-name{
 color: white;
 font-size: 14px;
